<resources>
    <string name="app_name">移动V享</string>
    <string name="action_settings">Settings</string>
    <string name="request_state_process">正在努力为您加载中...</string>
    <string name="request_state_error">点击重新加载</string>
    <string name="request_state_empty">暂无相关信息</string>
    <string name="exit_hint">再按一次退出移动V享</string>
    <string name="exit_crash">很抱歉,程序出现异常,即将退出</string>
    <string name="update_title">检测更新</string>
    <string name="update_update">更新</string>
    <string name="update_dialog_title">正在更新</string>
    <string name="update_dialog_message">正在下载更新%1$s</string>
    <string name="update_failed">更新程序下载失败...</string>
    <string name="update_version_compare">检测到最新版本%1$s，当前版本为%2$s。</string>
    <string name="title_headline">要闻</string>
    <string name="title_video">视频</string>
    <string name="title_lecture">讲堂</string>
    <string name="title_point">积分</string>
    <string name="title_pointmarket">积分商城</string>
    <string name="title_club">俱乐部</string>
    <string name="title_discount">商盟特惠</string>
    <string name="title_news">资讯</string>
    <string name="title_photo">图片</string>
    <string name="title_book">书籍</string>
    <string name="photo_count">%1$s图</string>
    <string name="title_location">选择地区</string>
    <string name="section_location">定位省市</string>
    <string name="section_hot">常用省市</string>
    <string name="section_all">全部省份</string>
    <string name="section_location_locationing">正在定位\u2026</string>
    <string name="section_location_locationfailed">定位失败，点击重试</string>
    <string name="section_book_local">我的书籍</string>
    <string name="section_book_remote">精选推荐</string>
    <string name="book_unknow_author">未知作者</string>
    <string name="book_parsing">解析中</string>
    <string name="book_parsing_completed">您的下载的 %1$s 已下载完成，请点击阅读~</string>
    <string name="book_parsing_failed">您的下载的 %1$s 下载失败，请稍后重试...</string>
    <string name="book_chapter_format">第%1$s章</string>
    <string name="book_read_first">当前是第一页</string>
    <string name="book_read_last">当前是最后一页</string>
    <string name="book_detail_desc">简介</string>
    <string name="book_detail_chapter">章节</string>
    <string name="book_detail_read">阅读</string>
    <string name="book_detail_download">下载</string>
    <string name="book_detail_downlaoding">下载中</string>
    <string name="book_detail_analyse">解析中</string>
    <string name="book_detail_retry">重试</string>
    <string name="book_dialog_delete_msg">您是否确定要删除？</string>
    <string name="section_club_local">地区俱乐部</string>
    <string name="section_club_country">全国其他地区俱乐部</string>
    <string name="section_club_service">会员服务</string>
    <string name="section_club_lobby">移动贵宾厅</string>
    <string name="title_service">会员服务</string>
    <string name="title_lobby">贵宾厅</string>
    <string name="club_call_10086">拨打10086咨询</string>
    <string name="service_message">2013年，秉承 “尊崇倍至，享我所想” 的服务理念，全球通VIP俱乐部倾力为每一位尊贵的会员搭建沟通的桥梁，真诚希望我们的贴心服务能够为您的工作和生活增添无限的精彩！</string>
    <string name="lobby_message_railway">VIP火车站贵厅服务是中国移动为全球通VIP俱乐部会员度身定做的火车站候车服务。火车站贵宾厅服务仅在部分地区推出，详情请咨询10086。</string>
    <string name="lobby_message_airport">VIP机场贵宾厅服务是中国移动为全球通VIP俱乐部会员度身定做的机场候机服务。机场贵宾厅服务仅在部分地区推出，详情请咨询10086。</string>
    <string name="section_club_introduce">俱乐部介绍</string>
    <string name="section_club_servicetarget">服务对象</string>
    <string name="section_club_participate">参与方式</string>
    <string name="section_club_photos">往期活动图片</string>
    <string name="club_empty_hint">会员专享服务信息正在完善，敬请期待。更多服务，欢迎拨打当地10086客服热线咨询！</string>
    <string name="title_railway">火车站</string>
    <string name="title_airport">机场</string>
    <string name="lobby_detail">详情</string>
    <string name="lobby_empty_hint">贵宾厅的服务信息正在完善，敬请期待。更多服务，欢迎拨打当地10086客服热线咨询！</string>
    <string name="lobby_dial">是否拨打10086进行咨询？</string>
    <string name="lobby_detail_content">服务内容</string>
    <string name="lobby_detail_target">服务对象</string>
    <string name="lobby_detail_standard">服务标准</string>
    <string name="lobby_detail_acceptway">服务受理方式</string>
    <string name="lobby_detail_content_railway">基础服务：免费茶点，报刊阅览，列车时刻信息查询，移动业务办理等。\n特殊服务内容：为客户提供专属通道服务。\n各个火车站贵宾厅提供的具体服务内容，客户可在页面下方选择关注的贵宾厅查看。</string>
    <string name="lobby_detail_target_railway">1、全国火车站贵宾厅面向全球通VIP俱乐部钻石卡、金卡、银卡会员开放服务。\n2、部分火车站贵宾厅在某一时段内可为本省其他客户开放服务。</string>
    <string name="lobby_detail_standard_railway">全球通VIP俱乐部钻石卡、金卡、银卡会员无免费使用次数。所有客户使用贵宾厅需积分兑换。积分兑换价如下：\n国内厅基础服务积分兑换：2000分/次\n国内厅基础+特殊服务积分兑换：3000分/次\n国际厅积分兑换：3000分/次</string>
    <string name="lobby_detail_acceptway_railway">1、钻石卡、金卡、银卡会员，凭有效身份证件及VIP会员卡到全国火车站贵宾厅申请服务。\n2、其他客户，在积分商城兑换服务凭证后，根据凭证有效期要求到兑换的火车站贵宾厅享受服务。</string>
    <string name="lobby_detail_content_airport">基础服务：免费茶点，报刊阅览，航班信息查询，移动业务办理等。\n特殊服务：为客户提供专属通道服务。\n全国各机场贵宾厅提供的具体服务内容，客户可在页面下方选择关注的贵宾厅查看。</string>
    <string name="lobby_detail_target_airport">1、全国机场贵宾厅面向全球通VIP俱乐部钻石卡、金卡会员开放服务。\n2、部分机场贵宾厅在某一时段内可为本省其他客户开放服务。</string>
    <string name="lobby_detail_standard_airport">1、免费使用次数\n全球通VIP俱乐部钻石卡、金卡会员每年具有全国机场贵宾宾厅免费使用次数。\n钻石卡会员免费使用次数：12次。\n金卡会员免费使用次数：6次。\n2、积分兑换价\n全球通VIP俱乐部钻石卡、金卡会员超出免费次数后，以及本地其他客户使用贵宾厅需积分兑换。积分兑换价如下：\n国内厅基础服务积分兑换：4000分/次\n国内厅基础+特殊服务积分兑换：8000分/次\n国际厅积分兑换：8000分/次</string>
    <string name="lobby_detail_acceptway_airport">钻石卡、金卡会员，凭有效身份证件及VIP会员卡到全国机场贵宾厅申请服务。\n其他客户，在积分商城兑换服务凭证后，根据凭证有效期要求到兑换的机场贵宾厅享受服务。</string>
    <string name="discount_empty_info">提供美食、购物、娱乐、金融、IT、婚庆、宠物等一切与生活消费相关的优惠折扣资讯及详尽的消费体验。</string>
    <string name="discount_empty_hint">商盟特惠信息正在完善，敬请期待。更多服务，欢迎拨打当地10086客服热线咨询！</string>
    <string name="discount_call_or_not">您是否要拨打电话？</string>
    <string name="title_newsdetail">资讯</string>
    <string name="comment_allcomment">全部评论</string>
    <string name="comment_newsdetail">资讯内容</string>
    <string name="comment_handup">提交评论</string>
    <string name="comment_sending">发送中</string>
    <string name="comment_sended">已评论</string>
    <string name="comment_ontheway">您的评论已经在路上~请等待审核通过</string>
    <string name="comment_failed">暂时无法评论,请稍后再试</string>
    <string name="comment_count">共%1$s条评论</string>
    <string name="comment_title_usercomment">用户评论</string>
    <string name="comment_empty">请输入评论内容</string>
    <string name="lecture_type_notice">预告</string>
    <string name="lecture_type_ongoing">现场</string>
    <string name="lecture_type_history">回顾</string>
    <string name="lecture_pagecount_label">页数</string>
    <string name="lecture_pagecount">共%1$s页</string>
    <string name="title_detail">详情</string>
    <string name="title_comment">用户留言</string>
    <string name="title_videolist">视频列表</string>
    <string name="section_lecture_introduce_activity">活动介绍</string>
    <string name="section_lecture_introduce_guest">嘉宾介绍</string>
    <string name="section_lecture_acitivty_photo">活动图片</string>
    <string name="btn_lecture_usercomment">用户留言</string>
    <string name="btn_lecture_interest">感兴趣%1$s人</string>
    <string name="btn_lecture_signup">短信报名参加</string>
    <string name="btn_lecture_readcomment">查看评论</string>
    <string name="btn_lecture_videoreview">视频回顾</string>
    <string name="btn_lecture_requesting">提交中</string>
    <string name="lecture_interest_success">您已成功关注%1$s活动~</string>
    <string name="lecture_comment_title_user">用户留言</string>
    <string name="lecture_comment_title_comment">用户评论</string>
    <string name="title_topic">专题</string>
    <string name="title_relative_news">最新消息</string>
    <string name="title_relative_videos">视频列表</string>
    <string name="dialog_title_point">积分详情</string>
    <string name="gotone_diamond_cost">全球通钻卡用户积分：</string>
    <string name="gotone_gold_cost">全球通金卡用户积分：</string>
    <string name="gotone_sliver_cost">全球通银卡用户积分：</string>
    <string name="title_pointproduct">礼品详情</string>
    <string name="gotone_cost">全球通积分：</string>
    <string name="mzone_cost">动感地带M值：</string>
    <string name="easyown_cost">神州行积分：</string>
    <string name="exchange_hint">实际积分价格以短信兑换时为准</string>
    <string name="exchange_message">短信兑换：编辑短信内容发送短信兑换码 %1$s 到 %2$s，可短信兑换此礼品(发送及接收短信免费)</string>
    <string name="exchange_btn">直接短信兑换</string>
    <string name="exchange_tag">主要提示</string>
    <string name="exchange_productdesc">礼品描述</string>
    <string name="product_id">礼品号码：%1$s</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="more">更多</string>
    <string name="network_bad">当前的网络似乎不给力，请稍后重试~</string>
    <string name="unknow">未知</string>
    <string name="location_adjust">系统定位到您当前所在省市为%1$s，是否切换至%2$s？</string>
    <string name="allow_2g3g_picture">是否允许在2G、3G网络下加载图片</string>
    <string name="allow_2g3g_picture_message">检测到您当前使用的网络为2G、3G网络，是否继续加载图片？</string>
    <string name="allow_2g3g_video">是否允许在2G、3G网络下观看视频</string>
    <string name="allow_2g3g_video_message">检测到您当前使用的网络为2G、3G网络，是否继续观看视频？</string>
    <string name="title_about">关于</string>
    <string name="about_content">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020“移动 V 享客户端”是中国移动面向中高端客户提供服务的智能终端客户端软件，具备要闻资讯、图片视频、图书阅读、服务回馈等功能，方便客户随时随地享受中国移动的服务。本客户端所提供的的资讯、图片、视频、图书等内容和信息均由中国移动的合作伙伴提供，各相关合作伙伴依法对其提供的信息承担责任。\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020本客户端提供的信息内容仅供客户个人浏览，不得转发或转其他使用。</string>
    <string name="about_copyright_cn">中国移动 版权所有</string>
    <string name="about_copyright_en">Copyright@2013 China Mobile All Right Reserved</string>
    <string name="title_feedback">意见反馈</string>
    <string name="feedback_contact">联系方式</string>
    <string name="feedback_handup">提交</string>
    <string name="feedback_handuping">提交中</string>
    <string name="feedback_hint_content">请输入您的反馈意见（限255个字）</string>
    <string name="feedback_hint_contact">请输入您的手机号/邮箱/QQ号码</string>
    <string name="feedback_handup_success">我们已经收到您的反馈~</string>
    <string name="feedback_handup_empty">反馈意见不能为空~</string>
    <string name="feedback_handup_over">您的反馈意见超出长度限制，我们将自动为您截取反馈内容。</string>
    <string name="close">关闭</string>
    <string name="search">搜索</string>
    <string name="titlebar_cancel">取消</string>
    <string name="titlebar_help">帮助</string>
    <string name="titlebar_feedback">意见反馈</string>
    <string name="titlebar_refresh">刷新</string>
    <string name="titlebar_back">返回</string>
    <string name="download_title">"下载历史记录"</string>
    <string name="download_unknown_filename">"&lt;未知&gt;"</string>
    <string name="download_menu_open">"打开"</string>
    <string name="download_menu_clear">"从列表中清除"</string>
    <string name="download_menu_delete">"删除"</string>
    <string name="download_menu_cancel">"取消下载"</string>
    <string name="download_menu_cancel_all">"取消所有下载"</string>
    <string name="download_cancel_dlg_title">"取消下载"</string>
    <string name="download_cancel_dlg_msg">"所有 %d 项下载都会取消并从下载历史记录中清除。"</string>
    <string name="download_delete_file">"文件将被删除"</string>
    <string name="download_file_error_dlg_title">"没有存储空间"</string>
    <string name="download_file_error_dlg_msg">"无法下载%s。"\n"请释放部分手机空间，然后重试。"</string>
    <string name="download_failed_generic_dlg_title">"下载失败"</string>
    <string name="download_no_sdcard_dlg_title">"无 SD 卡"</string>
    <string name="download_no_sdcard_dlg_msg">"需要有 SD 卡才能下载%s。"</string>
    <string name="download_sdcard_busy_dlg_title">"SD 卡不可用"</string>
    <string name="download_sdcard_busy_dlg_msg">"SD 卡正忙。要允许下载，请在通知中选择“关闭 USB 存储”。"</string>
    <string name="download_no_application_title">"无法打开文件"</string>
    <string name="no_downloads">"下载历史记录为空。"</string>
    <string name="download_error">"下载不成功。"</string>
    <string name="download_success">"下载完成。"</string>
    <string name="download_begin">"开始下载"</string>
    <string name="download_running">正在下载&#8230;</string>
    <string name="download_pending">正在开始下载&#8230;</string>
    <string name="download_paused">已暂停下载</string>
    <string name="download_pending_network">正在等待数据连接&#8230;</string>
    <string name="download_running_paused">正在等待数据连接&#8230;</string>
    <string name="download_canceled">"下载已取消。"</string>
</resources>