<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_listitem_nor"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_state_empty_service"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_vip_head" />

    <TextView
        android:id="@+id/text_head_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="15dip"
        android:text="@string/service_message"
        android:textColor="@color/font_list_desc"
        android:textSize="@dimen/font_list_subtitle" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/divider" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="70dip" >

            <View
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:background="@drawable/image_state_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/club_empty_hint"
                android:textColor="@color/font_list_tag"
                android:textSize="@dimen/font_list_subtitle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_state_call"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_blue"
            android:text="@string/club_call_10086"
            android:textColor="@color/font_list_cover"
            android:textSize="@dimen/font_list_subtitle" />
    </RelativeLayout>

</LinearLayout>